--- a/css/style.css
+++ b/css/style.css
@@ -25,30 +25,35 @@ h1, h4  {
 }
 /* Navigation Panel CSS */
 a.navlink:link{
-  background-color: #9797a6;
+  background-color: #000000;
   color: #00ffff;
-  padding: 2px 2px;
-  border: 2px;
-  border-radius: 5px;
+  padding: 4px 4px;
+  border: 4px;
+  border-radius: 10px;
   text-align: center;
   text-decoration: underline;
   display: inline-block;
-  font-size: 75%;
+  font-size: 100%;
+  float: left;
+  margin: 10px;
 }
 a.navlink:visited{
   color: #00ff40;
+  background-color: #000000;
 }
 a.navlink:hover {
   font-family: "Arial Black", Gadget, sans-serif;
   background-color: #333333;
   font-size: 150%;
   cursor: crosshair;
+  border-radius: 10px;
 }
 .navlist  {
- list-style-type: none;
- padding: 0%;
+  padding: 0%;
 }
 #navcontainer {
+  margin: 0;
+  padding: 0;
   font-size: 1.25em;
   font-variant: small-caps;
   position: sticky;
@@ -56,6 +61,7 @@ a.navlink:hover {
 }
 #navbar {
   top: 0;
+  padding: 0;
   width: 100%;
   height: 5em;
   display: flex;
@@ -64,6 +70,7 @@ a.navlink:hover {
   background: #424251;
   color: grey;
   text-align: center;
+  list-style-type: none;
 }
 /* Index Page specific CSS */
 .imgcontain {
@@ -98,14 +105,17 @@ a.navlink:hover {
 #imgitemskydive  {
   padding-bottom: 7.5%;
   padding-top: 0%;
+  order: 0;
 }
 #imgitemyellowstone {
   padding-bottom: 7.5%;
   padding-top: 0%;
+  order: 4;
 }
 #imgitemireland {
   padding-bottom: 7.5%;
   padding-top: 0%;
+  order: 1;
 }
 #homebody {
   background: rgb(40,0,184);
